# Rust_backend

./: .env  Cargo.toml  README.md
src/: entity.rs  main.rs
src/api/: user_api.rs
src/db/: database.rs
src/entity/: role.rs  ship.rs  user.rs
src/model/: user_model.rs
src/service/: user_service.rs
