[package]
name = "Rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.10", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = "0.4"